Rewrite the README and move detailed design notes to docs/ENGINEERING.md